# mc-trend-analysis

./: .dockerignore  .env.demo.example  .env.dev.example  .env.example  .env.prod.example  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  index.css
docs/alerting/: alert-engine.md  alert-types.md  notification-strategy.md  signal-philosophy.md
docs/architecture/: components.md  event-flow.md  pipelines.md  system-architecture.md  trust-boundaries.md
docs/core/: 00-project-overview.md  01-system-philosophy.md  02-success-metrics.md  03-scope-and-non-goals.md
docs/examples/: example-alerts.md  example-scenarios.md  scoring-walkthroughs.md
docs/implementation/: agent-strategy.md  current-approach.md  data-model.md  roadmap.md
docs/ingestion/: event-ingestion.md  normalization.md  relevance-filtering.md  source-types.md  token-ingestion.md  x-emergent-narrative-detection.md  x-twitter-integration.md
docs/intelligence/: momentum-analysis.md  narrative-intelligence.md  narrative-linking.md  og-token-resolution.md  probability-framework.md  rug-risk-framework.md  scoring-model.md
docs/operations/: deploy-readiness-audit.md  environment-setup.md  limitations.md  troubleshooting.md  verification-guide.md
docs/research/: adversarial-patterns.md  source-catalog.md
docs/rules/: anti-overengineering.md  data-quality-rules.md  decision-rules.md  engineering-rules.md
docs/skills/: alert-patterns.md  (+3 more)
(+110 files in other folders)
